--- a/config.example.json
+++ b/config.example.json
@@ -1,13 +1,42 @@
 {
   "debug": true,
   "window_title": "qemu-system-aarch64",
+  "preset_name": "Blue Archive",
+
   "keybinds": {
-    "esc": [116, 84],
-    "`": [2470, 90],
-    "1": [1775, 1242],
-    "2": [1980, 1242],
-    "3": [2173, 1242],
-    "s": [2410, 1260],
-    "a": [2420, 1360]
+    "esc": {
+      "x": 116,
+      "y": 84
+    },
+
+    "`": {
+      "x": 2470,
+      "y": 90
+    },
+
+    "1": {
+      "x": 1775,
+      "y": 1242
+    },
+
+    "2": {
+      "x": 1980,
+      "y": 1242
+    },
+
+    "3": {
+      "x": 2173,
+      "y": 1242
+    },
+
+    "s": {
+      "x": 2410,
+      "y": 1260
+    },
+
+    "a": {
+      "x": 2420,
+      "y": 1360
+    }
   }
 }
